--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@ R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, E.&nbsp;Viterbo, and I.&nbsp;V.&nbsp;
 <tr valign="top">
 	<td>
 	R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, and I.&nbsp;V.&nbsp;L. Clarkson.
-	 Direction estimation by minimum squared arc length.
-	 accepted to <em>IEEE Trans. Signal Process.</em>, Jan. 2012.<br />
+ Direction estimation by minimum squared arc length.
+ <em>IEEE Trans. Sig. Process.</em>, 60(5):2115-2124, May 2012.<br />
 	[&nbsp;<a href="robby_bib.html#McKilliam_mean_dir_est_sq_arc_length2010">bib</a> | <a href="http://github.com/robbymckilliam/direction_estimation_by_minimum_squared_arc_length">code</a>&nbsp;]
 	</td>
 	</tr>
