--- a/robby_bib.html
+++ b/robby_bib.html
@@ -18,12 +18,16 @@
 </pre>
 
 <a name="McKilliam_mean_dir_est_sq_arc_length2010"></a><pre>
-@unpublished{<a href="robby.html#McKilliam_mean_dir_est_sq_arc_length2010">McKilliam_mean_dir_est_sq_arc_length2010</a>,
+@article{<a href="robby.html#McKilliam_mean_dir_est_sq_arc_length2010">McKilliam_mean_dir_est_sq_arc_length2010</a>,
   author = {R. G. McKilliam and B. G. Quinn and I. V. L. Clarkson},
   title = {Direction estimation by minimum squared arc length},
-  note = {accepted to IEEE Trans. Sig. Proc.},
-  year = 2011,
-  month = {Mar.}
+  journal = {IEEE Trans. Sig. Process.},
+  volume = 60,
+  number = 5,
+  pages = {2115-2124},
+  year = 2012,
+  month = {May},
+  doi = {10.1109/TSP.2012.2186444}
 }
 </pre>
 
@@ -31,9 +35,9 @@
 @unpublished{<a href="robby.html#McKilliam_short_vectors_first_type_isit_2012">McKilliam_short_vectors_first_type_isit_2012</a>,
   author = {R. G. McKilliam and A. Grant},
   title = {Finding short vectors in a lattice of {Voronoi's} first kind},
-  note = {submitted to the International Symposium on Information Theory (ISIT)},
+  note = {accepted to the International Symposium on Information Theory (ISIT)},
   year = 2012,
-  month = {Jan.}
+  month = {Apr.}
 }
 </pre>
 
@@ -48,17 +52,16 @@
 </pre>
 
 <a name="McKilliam_error_prob_An2012"></a><pre>
-@article{<a href="robby.html#McKilliam_error_prob_An2012">McKilliam_error_prob_An2012</a>,
+@unpublished{<a href="robby.html#McKilliam_error_prob_An2012">McKilliam_error_prob_An2012</a>,
   author = {R. G. McKilliam and
                R. Subramanian and
                E. Viterbo and
                I. V. L. Clarkson},
   title = {On the error performance of the ${A}_{n}$ lattices},
-  journal = {CoRR},
-  volume = {abs/1111.6334},
-  year = 2011,
-  ee = {<a href="http://arxiv.org/abs/1111.6334">http://arxiv.org/abs/1111.6334</a>},
-  bibsource = {DBLP, http://dblp.uni-trier.de}
+  note = {accepted to IEEE Trans. Inf. Th.},
+  month = {Apr.},
+  year = 2012,
+  url = {<a href="http://arxiv.org/abs/1111.6334">http://arxiv.org/abs/1111.6334</a>}
 }
 </pre>
 
