--- a/robby_bib.html
+++ b/robby_bib.html
@@ -31,13 +31,23 @@
 }
 </pre>
 
+<a name="Quinn_sparse_noisy_SSP_2012"></a><pre>
+@unpublished{<a href="robby.html#Quinn_sparse_noisy_SSP_2012">Quinn_sparse_noisy_SSP_2012</a>,
+  author = {B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam},
+  title = {Estimating Period From Sparse, Noisy Timing Data},
+  note = {accepted for {IEEE Statistical Signal Processing Workshop}},
+  year = 2012,
+  month = {Aug}
+}
+</pre>
+
 <a name="McKilliam_short_vectors_first_type_isit_2012"></a><pre>
-@unpublished{<a href="robby.html#McKilliam_short_vectors_first_type_isit_2012">McKilliam_short_vectors_first_type_isit_2012</a>,
+@article{<a href="robby.html#McKilliam_short_vectors_first_type_isit_2012">McKilliam_short_vectors_first_type_isit_2012</a>,
   author = {R. G. McKilliam and A. Grant},
   title = {Finding short vectors in a lattice of {Voronoi's} first kind},
-  note = {accepted to the International Symposium on Information Theory (ISIT)},
+  journal = {International Symposium on Information Theory (ISIT)},
   year = 2012,
-  month = {Apr.}
+  month = {July}
 }
 </pre>
 
@@ -61,6 +71,7 @@
   note = {accepted to IEEE Trans. Inf. Th.},
   month = {Apr.},
   year = 2012,
+  doi = {10.1109/TIT.2012.2199462},
   url = {<a href="http://arxiv.org/abs/1111.6334">http://arxiv.org/abs/1111.6334</a>}
 }
 </pre>
