Added updates for the An probability of error paper.

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@ Robby McKilliam is at the Institute for Telecommunications Research at the Unive
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, E.&nbsp;Viterbo, and I.&nbsp;V.&nbsp;L. Clarkson.
  On the error performance of the <em>A</em><sub>n</sub> lattices.
- accepted to <em>IEEE Trans. Inform. Theory</em>, Apr. 2012.<br />
-	[&nbsp;<a href="robby_bib.html#McKilliam_mean_dir_est_sq_arc_length2010">bib</a> | <a href="http://arxiv.org/abs/1111.6334">arxiv</a>&nbsp; | code: <a href="https://github.com/robbymckilliam/An_lattice_error_probability">git</a>&nbsp;<a href="https://github.com/robbymckilliam/An_lattice_error_probability">zip</a>]
+  <em>IEEE Trans. Inform. Theory</em>, 58(9):5941-5949, Sep. 2012.<br />
+	[&nbsp;<a href="robby_bib.html#McKilliam_mean_dir_est_sq_arc_length2010">bib</a> | <a href="http://dx.doi.org/10.1109/TIT.2012.2199462">doi</a>&nbsp; | <a href="http://arxiv.org/abs/1111.6334">arxiv</a>&nbsp; | <a href="https://github.com/robbymckilliam/An_lattice_error_probability">code</a>&nbsp;]
 </td>
 </tr>
 
@@ -62,7 +62,7 @@ R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, E.&nbsp;Viterbo, and I.&nbsp;V.&nbsp;
 	R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, and I.&nbsp;V.&nbsp;L. Clarkson.
  Direction estimation by minimum squared arc length.
  <em>IEEE Trans. Sig. Process.</em>, 60(5):2115-2124, May 2012.<br />
-	[&nbsp;<a href="robby_bib.html#McKilliam_mean_dir_est_sq_arc_length2010">bib</a> | <a href="http://dx.doi.org/10.1109/TSP.2012.2186444">doi</a> | <a href="http://github.com/robbymckilliam/direction_estimation_by_minimum_squared_arc_length">code</a>&nbsp;]
+	[&nbsp;<a href="robby_bib.html#McKilliam_mean_dir_est_sq_arc_length2010">bib</a>&nbsp;|&nbsp;<a href="http://dx.doi.org/10.1109/TSP.2012.2186444">doi</a>&nbsp;|&nbsp;<a href="http://github.com/robbymckilliam/direction_estimation_by_minimum_squared_arc_length">code</a>&nbsp;]
 	</td>
 	</tr>
 
@@ -71,8 +71,7 @@ R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, E.&nbsp;Viterbo, and I.&nbsp;V.&nbsp;
 		R.&nbsp;G. McKilliam, Barry&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and Bill Moran.
 		  Frequency estimation by phase unwrapping.
 		  <em>IEEE Trans. Signal Process.</em>, 58(6):2953-2963, June 2010.</br>
-		[ <a href="./robby_bib.html#McKilliamFrequencyEstimationByPhaseUnwrapping2009">bib</a> | 
-		  <a href="http://dx.doi.org/10.1109/TSP.2010.2045786">doi</a> | <a href="http://github.com/robbymckilliam/frequency_estimation_by_phase_unwrapping">code</a>&nbsp;]
+		[&nbsp;<a href="./robby_bib.html#McKilliamFrequencyEstimationByPhaseUnwrapping2009">bib</a>&nbsp;|&nbsp;<a href="http://dx.doi.org/10.1109/TSP.2010.2045786">doi</a>&nbsp;|&nbsp;<a href="http://github.com/robbymckilliam/frequency_estimation_by_phase_unwrapping">code</a>&nbsp;]
 		</td>
 	</tr>
 	
@@ -81,9 +80,7 @@ R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, E.&nbsp;Viterbo, and I.&nbsp;V.&nbsp;
 		R.&nbsp;G. McKilliam, W.&nbsp;D. Smith, and I.&nbsp;V.&nbsp;L. Clarkson.
 		  Linear-time nearest point algorithms for Coxeter lattices.
 		  <em>IEEE Trans. Inform. Theory</em>, 56(3):1015-1022, Mar. 2010.<br />
-		[ <a href="./robby_bib.html#McKilliam2009CoxeterLattices">bib</a> 
-		| <a href="http://dx.doi.org/10.1109/TIT.2009.2039090">doi</a> 
-		| <a href="http://arxiv.org/abs/0903.0673">arxiv</a>&nbsp;]
+		[&nbsp;<a href="./robby_bib.html#McKilliam2009CoxeterLattices">bib</a>&nbsp;|&nbsp;<a href="http://dx.doi.org/10.1109/TIT.2009.2039090">doi</a>&nbsp;|&nbsp;<a href="http://arxiv.org/abs/0903.0673">arxiv</a>&nbsp;]
 		</td>
 	</tr>
 	
@@ -93,8 +90,7 @@ R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, E.&nbsp;Viterbo, and I.&nbsp;V.&nbsp;
 		Identifiability and aliasing in polynomial-phase signals.
 		<em>IEEE Trans. Signal Process.</em>, 57(11):4554-4557, Nov. 2009.<br />
 	<!--	<b>Winner:</b> Canon Information Systems Research Australia (CiSRA) best paper prize 2010. <br /> -->
-		[ <a href="./robby_bib.html#McKilliam2009IndentifiabliltyAliasingPolyphase">bib</a> |
-		<a href="http://dx.doi.org/10.1109/TSP.2009.2026511">doi</a>&nbsp;]
+		[&nbsp;<a href="./robby_bib.html#McKilliam2009IndentifiabliltyAliasingPolyphase">bib</a>&nbsp;|&nbsp;<a href="http://dx.doi.org/10.1109/TSP.2009.2026511">doi</a>&nbsp;]
 		
 		</td>
 	</tr>
@@ -104,9 +100,7 @@ R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, E.&nbsp;Viterbo, and I.&nbsp;V.&nbsp;
 		R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;G. Quinn.
   		An algorithm to compute the nearest point in the lattice <em>A</em><sub>n</sub><sup>*</sup>.
   		<em>IEEE Trans. Inform. Theory</em>, 54(9):4378-4381, Sep. 2008.<br />
-		[ <a href="./robby_bib.html#McKilliam2008">bib</a> 
-		| <a href="http://dx.doi.org/10.1109/TIT.2008.928280">doi</a>
-		| <a href="http://arxiv.org/abs/0801.1364">arxiv</a> ]
+		[&nbsp;<a href="./robby_bib.html#McKilliam2008">bib</a>&nbsp;|&nbsp;<a href="http://dx.doi.org/10.1109/TIT.2008.928280">doi</a>&nbsp;|&nbsp;<a href="http://arxiv.org/abs/0801.1364">arxiv</a>&nbsp;]
 	</td>
 	</tr>
 
