--- a/index.html
+++ b/index.html
@@ -50,10 +50,19 @@ Robby McKilliam is at the Institute for Telecommunications Research at the Unive
 
 <tr valign="top">
 <td class="bibtexitem">
+R.&nbsp;G. McKilliam and A.&nbsp;Pollok.
+ On the Cram&eacute;r-Rao bound for polynomial phase signals.
+ submitted to IEEE Signal Processing Letters, Aug 2012. <br />
+[&nbsp;<a href="robby_bib.html#McKilliam_polycrbs_2012">bib</a>&nbsp|&nbsp;<a href="https://github.com/robbymckilliam/polynomialphasecrbs">code</a>&nbsp;]
+</td>
+</tr>
+
+<tr valign="top">
+<td class="bibtexitem">
 R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, E.&nbsp;Viterbo, and I.&nbsp;V.&nbsp;L. Clarkson.
  On the error performance of the <em>A</em><sub>n</sub> lattices.
   <em>IEEE Trans. Inform. Theory</em>, 58(9):5941-5949, Sep. 2012.<br />
-	[&nbsp;<a href="robby_bib.html#McKilliam_mean_dir_est_sq_arc_length2010">bib</a> | <a href="http://dx.doi.org/10.1109/TIT.2012.2199462">doi</a>&nbsp; | <a href="http://arxiv.org/abs/1111.6334">arxiv</a>&nbsp; | <a href="https://github.com/robbymckilliam/An_lattice_error_probability">code</a>&nbsp;]
+	[&nbsp;<a href="robby_bib.html#McKilliam_mean_dir_est_sq_arc_length2010">bib</a>&nbsp;|&nbsp;<a href="http://dx.doi.org/10.1109/TIT.2012.2199462">doi</a>&nbsp;|&nbsp;<a href="http://arxiv.org/abs/1111.6334">arxiv</a>&nbsp;|&nbsp;<a href="https://github.com/robbymckilliam/An_lattice_error_probability">code</a>&nbsp;]
 </td>
 </tr>
 
