--- a/robby.html
+++ b/robby.html
@@ -47,8 +47,21 @@ B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-<<<<<<< HEAD
-[<a name="McKilliam_LSU_polyest_part1_2012">3</a>]
+[<a name="McKilliam_polycrbs_2012">3</a>]
+</td>
+<td class="bibtexitem">
+R.&nbsp;G. McKilliam and A.&nbsp;Pollok.
+ On the Cram&eacute;r-Rao bound for polynomial phase signals.
+ submitted to IEEE Signal Processing Letters, Aug 2012.
+[&nbsp;<a href="robby_bib.html#McKilliam_polycrbs_2012">bib</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="McKilliam_LSU_polyest_part1_2012">4</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;Moran, and B.&nbsp;Vellambi.
@@ -64,7 +77,7 @@ R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;Mor
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_LSU_polyest_part2_2012">4</a>]
+[<a name="McKilliam_LSU_polyest_part2_2012">5</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;Moran, and B.&nbsp;Vellambi.
@@ -80,10 +93,7 @@ R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;Mor
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_short_vectors_first_type_isit_2012">5</a>]
-=======
-[<a name="McKilliam_short_vectors_first_type_isit_2012">3</a>]
->>>>>>> 283d5216bd220147b96cc32dc9dadd9960963e39
+[<a name="McKilliam_short_vectors_first_type_isit_2012">6</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and A.&nbsp;Grant.
@@ -98,11 +108,7 @@ R.&nbsp;G. McKilliam and A.&nbsp;Grant.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-<<<<<<< HEAD
-[<a name="Kodithuwakku_projection_PIC_ICC_2012">6</a>]
-=======
-[<a name="Kodithuwakku_projection_PIC_ICC_2012">4</a>]
->>>>>>> 283d5216bd220147b96cc32dc9dadd9960963e39
+[<a name="Kodithuwakku_projection_PIC_ICC_2012">7</a>]
 </td>
 <td class="bibtexitem">
 J.&nbsp;Kodithuwakku, N.&nbsp;A. Letzepiz, A.&nbsp;Grant, and R.&nbsp;G. McKilliam.
@@ -118,23 +124,14 @@ J.&nbsp;Kodithuwakku, N.&nbsp;A. Letzepiz, A.&nbsp;Grant, and R.&nbsp;G. McKilli
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-<<<<<<< HEAD
-[<a name="McKilliam_error_prob_An2012">7</a>]
-=======
-[<a name="McKilliam_error_prob_An2012">5</a>]
->>>>>>> 283d5216bd220147b96cc32dc9dadd9960963e39
+[<a name="McKilliam_error_prob_An2012">8</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, and E.&nbsp;Viterbo I. V.&nbsp;L. Clarkson.
  On the error performance of the <em>a</em><sub>n</sub> lattices.
  <em>IEEE Trans. Inform. Theory</em>, 58(9):5941-5949, Sep. 2012.
 [&nbsp;<a href="robby_bib.html#McKilliam_error_prob_An2012">bib</a>&nbsp;| 
-<<<<<<< HEAD
 <a href="http://dx.doi.org/10.1109/TIT.2012.2199462">DOI</a>&nbsp;]
-=======
-<a href="http://dx.doi.org/10.1109/TIT.2012.2199462">DOI</a>&nbsp;| 
-<a href="http://arxiv.org/abs/1111.6334">http</a>&nbsp;]
->>>>>>> 283d5216bd220147b96cc32dc9dadd9960963e39
 
 </td>
 </tr>
@@ -142,11 +139,7 @@ R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, and E.&nbsp;Viterbo I. V.&nbsp;L. Cla
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-<<<<<<< HEAD
-[<a name="Quinn_snpe_dasp_2011">8</a>]
-=======
-[<a name="Quinn_snpe_dasp_2011">6</a>]
->>>>>>> 283d5216bd220147b96cc32dc9dadd9960963e39
+[<a name="Quinn_snpe_dasp_2011">9</a>]
 </td>
 <td class="bibtexitem">
 B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
@@ -160,11 +153,7 @@ B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-<<<<<<< HEAD
-[<a name="McKilliam_direstcro_dasp_2011">9</a>]
-=======
-[<a name="McKilliam_direstcro_dasp_2011">7</a>]
->>>>>>> 283d5216bd220147b96cc32dc9dadd9960963e39
+[<a name="McKilliam_direstcro_dasp_2011">10</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and B.&nbsp;G. Quinn.
@@ -178,11 +167,7 @@ R.&nbsp;G. McKilliam and B.&nbsp;G. Quinn.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-<<<<<<< HEAD
-[<a name="McKilliam_polyphase_est_icassp_2011">10</a>]
-=======
-[<a name="McKilliam_polyphase_est_icassp_2011">8</a>]
->>>>>>> 283d5216bd220147b96cc32dc9dadd9960963e39
+[<a name="McKilliam_polyphase_est_icassp_2011">11</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;Moran.
@@ -199,11 +184,7 @@ R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-<<<<<<< HEAD
-[<a name="McKilliam2007">11</a>]
-=======
-[<a name="McKilliam2007">9</a>]
->>>>>>> 283d5216bd220147b96cc32dc9dadd9960963e39
+[<a name="McKilliam2007">12</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -219,11 +200,7 @@ R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-<<<<<<< HEAD
-[<a name="McKilliamLinearTimeBlockPSK2009">12</a>]
-=======
-[<a name="McKilliamLinearTimeBlockPSK2009">10</a>]
->>>>>>> 283d5216bd220147b96cc32dc9dadd9960963e39
+[<a name="McKilliamLinearTimeBlockPSK2009">13</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, D.&nbsp;J. Ryan, and I.&nbsp;B. Collings.
@@ -243,11 +220,7 @@ We propose a new algorithm for noncoherent sequence detection of M-ary phase-shi
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-<<<<<<< HEAD
-[<a name="McKilliam2009IndentifiabliltyAliasingPolyphase">13</a>]
-=======
-[<a name="McKilliam2009IndentifiabliltyAliasingPolyphase">11</a>]
->>>>>>> 283d5216bd220147b96cc32dc9dadd9960963e39
+[<a name="McKilliam2009IndentifiabliltyAliasingPolyphase">14</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -262,11 +235,7 @@ R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-<<<<<<< HEAD
-[<a name="McKilliam2009asilomar_polyest_lattice">14</a>]
-=======
-[<a name="McKilliam2009asilomar_polyest_lattice">12</a>]
->>>>>>> 283d5216bd220147b96cc32dc9dadd9960963e39
+[<a name="McKilliam2009asilomar_polyest_lattice">15</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;G. Quinn, and B.&nbsp;Moran.
@@ -282,11 +251,7 @@ R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;G. Quinn, and B.&nbsp
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-<<<<<<< HEAD
-[<a name="McKilliam2010_block_noncoherent_hex">15</a>]
-=======
-[<a name="McKilliam2010_block_noncoherent_hex">13</a>]
->>>>>>> 283d5216bd220147b96cc32dc9dadd9960963e39
+[<a name="McKilliam2010_block_noncoherent_hex">16</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;B. Collings.
@@ -301,11 +266,7 @@ R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-<<<<<<< HEAD
-[<a name="McKilliam2006">16</a>]
-=======
-[<a name="McKilliam2006">14</a>]
->>>>>>> 283d5216bd220147b96cc32dc9dadd9960963e39
+[<a name="McKilliam2006">17</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and G.&nbsp;Wyeth.
@@ -320,11 +281,7 @@ R.&nbsp;G. McKilliam and G.&nbsp;Wyeth.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-<<<<<<< HEAD
-[<a name="McKilliam2008">17</a>]
-=======
-[<a name="McKilliam2008">15</a>]
->>>>>>> 283d5216bd220147b96cc32dc9dadd9960963e39
+[<a name="McKilliam2008">18</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;G. Quinn.
@@ -340,11 +297,7 @@ R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;G. Quinn.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-<<<<<<< HEAD
-[<a name="McKilliam2008b">18</a>]
-=======
-[<a name="McKilliam2008b">16</a>]
->>>>>>> 283d5216bd220147b96cc32dc9dadd9960963e39
+[<a name="McKilliam2008b">19</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, W.&nbsp;D. Smith, and B.&nbsp;G. Quinn.
@@ -360,11 +313,7 @@ R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, W.&nbsp;D. Smith, and B.&nbsp
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-<<<<<<< HEAD
-[<a name="McKilliam2008a">19</a>]
-=======
-[<a name="McKilliam2008a">17</a>]
->>>>>>> 283d5216bd220147b96cc32dc9dadd9960963e39
+[<a name="McKilliam2008a">20</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;B. Collings.
@@ -381,11 +330,7 @@ R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-<<<<<<< HEAD
-[<a name="McKilliam2009CoxeterLattices">20</a>]
-=======
-[<a name="McKilliam2009CoxeterLattices">18</a>]
->>>>>>> 283d5216bd220147b96cc32dc9dadd9960963e39
+[<a name="McKilliam2009CoxeterLattices">21</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, W.&nbsp;D. Smith, and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -403,11 +348,7 @@ R.&nbsp;G. McKilliam, W.&nbsp;D. Smith, and I.&nbsp;V.&nbsp;L. Clarkson.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-<<<<<<< HEAD
-[<a name="McKilliam2010thesis">21</a>]
-=======
-[<a name="McKilliam2010thesis">19</a>]
->>>>>>> 283d5216bd220147b96cc32dc9dadd9960963e39
+[<a name="McKilliam2010thesis">22</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam.
@@ -422,11 +363,7 @@ R.&nbsp;G. McKilliam.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-<<<<<<< HEAD
-[<a name="McKilliamFrequencyEstimationByPhaseUnwrapping2009">22</a>]
-=======
-[<a name="McKilliamFrequencyEstimationByPhaseUnwrapping2009">20</a>]
->>>>>>> 283d5216bd220147b96cc32dc9dadd9960963e39
+[<a name="McKilliamFrequencyEstimationByPhaseUnwrapping2009">23</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;Moran.
@@ -447,11 +384,7 @@ Keywords: Central limit theorem, frequency estimation, lattices, nearest lattice
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-<<<<<<< HEAD
-[<a name="Quinn2008maximizing_the_periodogram">23</a>]
-=======
-[<a name="Quinn2008maximizing_the_periodogram">21</a>]
->>>>>>> 283d5216bd220147b96cc32dc9dadd9960963e39
+[<a name="Quinn2008maximizing_the_periodogram">24</a>]
 </td>
 <td class="bibtexitem">
 B.&nbsp;G. Quinn, R.&nbsp;G. McKilliam, and I.&nbsp;V.&nbsp;L. Clarkson.
