--- a/robby_bib.html
+++ b/robby_bib.html
@@ -39,7 +39,16 @@
 }
 </pre>
 
-<<<<<<< HEAD
+<a name="McKilliam_polycrbs_2012"></a><pre>
+@unpublished{<a href="robby.html#McKilliam_polycrbs_2012">McKilliam_polycrbs_2012</a>,
+  author = {R. G. McKilliam and A. Pollok},
+  title = {On the {C}ram\'{e}r-{R}ao bound for polynomial phase signals},
+  note = {submitted to {IEEE Signal Processing Letters}},
+  year = 2012,
+  month = {Aug}
+}
+</pre>
+
 <a name="McKilliam_LSU_polyest_part1_2012"></a><pre>
 @unpublished{<a href="robby.html#McKilliam_LSU_polyest_part1_2012">McKilliam_LSU_polyest_part1_2012</a>,
   author = {R. G. McKilliam and B. G. Quinn and I. V. L. Clarkson and B. Moran and B. Vellambi},
@@ -60,8 +69,6 @@
 }
 </pre>
 
-=======
->>>>>>> 283d5216bd220147b96cc32dc9dadd9960963e39
 <a name="McKilliam_short_vectors_first_type_isit_2012"></a><pre>
 @article{<a href="robby.html#McKilliam_short_vectors_first_type_isit_2012">McKilliam_short_vectors_first_type_isit_2012</a>,
   author = {R. G. McKilliam and A. Grant},
@@ -88,17 +95,12 @@
   journal = {IEEE Trans. Inform. Theory},
   title = {On the Error Performance of the $A_{n}$ Lattices},
   year = 2012,
-<<<<<<< HEAD
   month = {Sep.},
   volume = 58,
   number = 9,
   pages = {5941-5949},
   doi = {10.1109/TIT.2012.2199462},
   issn = {0018-9448}
-=======
-  doi = {10.1109/TIT.2012.2199462},
-  url = {<a href="http://arxiv.org/abs/1111.6334">http://arxiv.org/abs/1111.6334</a>}
->>>>>>> 283d5216bd220147b96cc32dc9dadd9960963e39
 }
 </pre>
 
