--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<!-- MSTableType="layout" -->
 	<tr>
 		<td valign="top" width="380"><span class="nfakPe">
-Robby McKilliam is at the Institute for Telecommunications Research at the University of South Australia, Adelaide.  His fields of interest are lattice theory, number theory, estimation theory and signal processing and communications.  In December 2010 he completed his PhD at the University of Queensland, Brisbane, Australia. In 2006 he completed his undergraduate studies in computer systems engineering and mathematics at the University of Queensland. In 2007, he received the Maude Walker scholarship from the school of information technology and electrical engineering at the University of Queensland and in 2010 he received a best paper award from the Canon Information Systems Research Australia (CiSRA). Robby's recreational interests are: swimming, skiing, math, motorbikes, videogames, wine, beer and coffee.
+Robby McKilliam is at the Institute for Telecommunications Research at the University of South Australia, Adelaide.  His fields of interest are lattice theory, number theory, estimation theory and signal processing and communications.  In December 2010 he completed his PhD at the University of Queensland, Brisbane, Australia. In 2006 he completed his undergraduate studies in computer systems engineering and mathematics at the University of Queensland. Robby's recreational interests are: swimming, skiing, math, motorbikes, videogames, wine, beer and coffee.
 		<!--<p> <a href="cv.pdf">A copy of my current cv is here.</a> </p> -->
 		<p> <b>Address</b>
 		<br> Institute for Telecommunications Research
@@ -52,7 +52,7 @@ Robby McKilliam is at the Institute for Telecommunications Research at the Unive
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and A.&nbsp;Pollok.
  On the Cram&eacute;r-Rao bound for polynomial phase signals.
- submitted to IEEE Signal Processing Letters, Aug 2012. <br />
+ submitted to <em>IEEE Signal Processing Letters</em>, Aug 2012. <br />
 [&nbsp;<a href="robby_bib.html#McKilliam_polycrbs_2012">bib</a>&nbsp|&nbsp;<a href="https://github.com/robbymckilliam/polynomialphasecrbs">code</a>&nbsp;]
 </td>
 </tr>
