added invited talks.

--- a/index.html
+++ b/index.html
@@ -274,14 +274,12 @@ B.&nbsp;G. Quinn, R.&nbsp;G. McKilliam, and I.&nbsp;V.&nbsp;L. Clarkson.
 	</tr>
 </table>
 
-<!--
 <br>
 <b>Invited Talks</b>
-<table>
-<tr valign="top"><td> Australian Communications Theory Workshop (AUSCTW), Melbourne, Australia, 2011 </a> </td></tr>
-<tr valign="top"><td> International Symposium on the Mathematical Theory of Networks and Systems (MNTS), Melbourne, Australia, 2012 </a> </td></tr>
+<table cellpadding="4" cellspacing="0" width="600">
+<tr valign="top"><td> The lattice <em>A</em><sub>n</sub><sup>*</sup> and applications to synchronisation. <em>Australian Communications Theory Workshop (AUSCTW)</em>, Melbourne, Australia, 2011. [&nbsp;<a href="talks/ausctw2011.pdf">pdf</a>&nbsp;] </td></tr>
+<tr valign="top"><td> The error performance of the <em>A</em><sub>n</sub> lattices. <em>International Symposium on the Mathematical Theory of Networks and Systems (MNTS)</em>, Melbourne, Australia, 2012 [&nbsp;<a href="talks/mnts2012.pdf">pdf</a>&nbsp;] </td></tr>
 </table>
--->
 
 <br>
 <b>Software</b>
