--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ B.&nbsp;G. Quinn, R.&nbsp;G. McKilliam, and I.&nbsp;V.&nbsp;L. Clarkson.
 <b>Invited Talks</b>
 <table cellpadding="4" cellspacing="0" width="600">
 <tr valign="top"><td> The lattice <em>A</em><sub>n</sub><sup>*</sup> and applications to synchronisation. <em>Australian Communications Theory Workshop (AUSCTW)</em>, Melbourne, Australia, 2011. [&nbsp;<a href="talks/ausctw2011.pdf">pdf</a>&nbsp;] </td></tr>
-<tr valign="top"><td> The error performance of the <em>A</em><sub>n</sub> lattices. <em>International Symposium on the Mathematical Theory of Networks and Systems (MNTS)</em>, Melbourne, Australia, 2012 [&nbsp;<a href="talks/mnts2012.pdf">pdf</a>&nbsp;] </td></tr>
+<tr valign="top"><td> The error performance of the <em>A</em><sub>n</sub> lattices. <em>International Symposium on the Mathematical Theory of Networks and Systems (MTNS)</em>, Melbourne, Australia, 2012 [&nbsp;<a href="talks/mnts2012.pdf">pdf</a>&nbsp;] </td></tr>
 </table>
 
 <br>
